// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simplebar renders with default slot 1`] = `
<div data-simplebar="init">
  <div class="simplebar-wrapper">
    <div class="simplebar-height-auto-observer-wrapper">
      <div class="simplebar-height-auto-observer"></div>
    </div>
    <div class="simplebar-mask">
      <div class="simplebar-offset" style="right: 0px; bottom: 0px;">
        <div class="simplebar-content-wrapper" style="height: auto; padding-right: 0px; padding-bottom: 0px; overflow-x: hidden; overflow-y: hidden;">
          <div class="simplebar-content">
            <div class="inner-content"></div>
          </div>
        </div>
      </div>
    </div>
    <div class="simplebar-placeholder" style="width: 0px; height: 0px;"></div>
  </div>
  <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;">
    <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0, 0); display: none;"></div>
  </div>
  <div class="simplebar-track simplebar-vertical" style="visibility: hidden;">
    <div class="simplebar-scrollbar" style="transform: translate3d(0, 0px, 0); display: none;"></div>
  </div>
</div>
`;

exports[`simplebar renders with options 1`] = `
<div data-simplebar-auto-hide="false" data-simplebar="init">
  <div class="simplebar-wrapper">
    <div class="simplebar-height-auto-observer-wrapper">
      <div class="simplebar-height-auto-observer"></div>
    </div>
    <div class="simplebar-mask">
      <div class="simplebar-offset" style="right: 0px; bottom: 0px;">
        <div class="simplebar-content-wrapper" style="height: auto; padding-right: 0px; padding-bottom: 0px; overflow-x: hidden; overflow-y: hidden;">
          <div class="simplebar-content"></div>
        </div>
      </div>
    </div>
    <div class="simplebar-placeholder" style="width: 0px; height: 0px;"></div>
  </div>
  <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;">
    <div class="simplebar-scrollbar simplebar-visible" style="transform: translate3d(0px, 0, 0); display: none;"></div>
  </div>
  <div class="simplebar-track simplebar-vertical" style="visibility: hidden;">
    <div class="simplebar-scrollbar simplebar-visible" style="transform: translate3d(0, 0px, 0); display: none;"></div>
  </div>
</div>
`;

exports[`simplebar renders without crashing 1`] = `
<div data-simplebar="init">
  <div class="simplebar-wrapper">
    <div class="simplebar-height-auto-observer-wrapper">
      <div class="simplebar-height-auto-observer"></div>
    </div>
    <div class="simplebar-mask">
      <div class="simplebar-offset" style="right: 0px; bottom: 0px;">
        <div class="simplebar-content-wrapper" style="height: auto; padding-right: 0px; padding-bottom: 0px; overflow-x: hidden; overflow-y: hidden;">
          <div class="simplebar-content"></div>
        </div>
      </div>
    </div>
    <div class="simplebar-placeholder" style="width: 0px; height: 0px;"></div>
  </div>
  <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;">
    <div class="simplebar-scrollbar" style="transform: translate3d(0px, 0, 0); display: none;"></div>
  </div>
  <div class="simplebar-track simplebar-vertical" style="visibility: hidden;">
    <div class="simplebar-scrollbar" style="transform: translate3d(0, 0px, 0); display: none;"></div>
  </div>
</div>
`;
